# dagster-university

./: .gitignore
dagster-essentials/: README.md  pyproject.toml  setup.cfg  setup.py
dagster-essentials/src/: definitions.py  utils.py
dagster-essentials/src/assets/: constants.py  metrics.py  requests.py  trips.py
dagster-essentials/src/jobs/: __init__.py
dagster-essentials/src/partitions/: __init__.py
dagster-essentials/src/resources/: __init__.py
dagster-essentials/src/schedules/: __init__.py
dagster-essentials/src/sensors/: __init__.py
instacart-analytics/: docker-compose.yml  pyproject.toml
instacart-analytics/database/: init.sql
